--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,10 @@ title: Fio                          # the main title
 tagline: ご飯を食べたの？   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Fio's personal blog.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-#url: 'https://fioreal.github.io'
-url: 'https://wiki.fio.ooo'
+url: ''
 
 github:
   username: fioreal             # change to your github username
@@ -39,7 +38,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: fio
+  name: Fio
   email: fioqaq@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -79,7 +78,7 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 'https://chirpy-img.netlify.app'
 
 # the avatar on sidebar, support local or CORS resources
 avatar: '/assets/img/avatar.jpg'
